--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,11 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "jeroennoten/laravel-adminlte": "^3.7",
         "laravel/framework": "^8.75",
-        "laravel/sanctum": "^2.11",
+        "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
         "laravelcollective/html": "^6.2",
+        "laravolt/indonesia": "^0.30.0",
         "nwidart/laravel-modules": "^8.2",
         "spatie/laravel-permission": "^5.5"
     },
