--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "nwidart/laravel-modules": "^8.2",
         "pragmarx/version": "^1.3",
         "realrashid/sweet-alert": "^4.1",
-        "spatie/laravel-permission": "^5.5"
+        "spatie/laravel-permission": "^5.5",
+        "yajra/laravel-datatables-oracle": "^9.19"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
